css/style.css
/* ... */
.have-sub-menu.open ul li a {
    display: inline-block;
}
*/
.have-sub-menu.open ul li a {
  display: inline-block;
  padding: 0 4px;
  color: #333 !important;
  position: relative;
  text-decoration: none;
  font-size: 40px;
}

.have-sub-menu.open ul li a span {
  position: relative;
  display: inline-block;
}

.have-sub-menu.open ul li a:after {
  content: "";
  width: 0;
  height: 2px;
  background: #333;
  position: absolute;
  bottom: 0;
  left: 0;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.have-sub-menu.open ul li a:hover:after {
  width: 100%;
}

.have-sub-menu.open ul {
  display: block;
  text-align: center;
}
.portfolio.have-sub-menu.open h2 {
  border-color: #333;
  color: #333;
  top: 25%;
  -webkit-transition: top 0.3s ease;
  transition: top 0.3s ease;
}
.portfolio.have-sub-menu.open h2,
.portfolio.have-sub-menu.open:hover h2 {
  border: 3px solid #333;
  font-family: CMC_regular, Helvetica, Arial, sans-serif;
}
.cmc-button {
  border: none;
  z-index: 10001;
  width: 50px;
  height: 50px;
  position: absolute;
  top: 50px;
  left: 50px;
  background: none;
  border-radius: none;
  display: inline-block;
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transform: rotate3d(1, 0, 0, 360deg);
  -ms-transform: rotate3d(1, 0, 0, 360deg);
  transform: rotate3d(1, 0, 0, 360deg);
}
.cmc-button:hover {
  opacity: 1;
}
.cmc-button:active {
  -webkit-transition: 0;
  transition: 0;
  background: rgba(0, 0, 0, 0.1);
}
.cmc-button:after {
  float: left;
  content: "";
  border: 1px solid #dec311;
  width: 56px;
  height: 56px;
  position: absolute;
  top: -4px;
  left: -4px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}
.line {
  position: absolute;
  display: inline-block;
  width: 40px;
  height: 4px;
  background: #dec311;
  border-radius: 2.85714286px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  float: left;
  left: 4px;
}
.lines {
  position: absolute;
  display: inline-block;
  width: 40px;
  height: 4px;
  background: #dec311;
  border-radius: 2.85714286px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  float: left;
  left: 4px;
  position: relative;
}
.lines:before,
.lines:after {
  display: inline-block;
  width: 40px;
  height: 4px;
  background: #dec311;
  border-radius: 2.85714286px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  float: left;
  left: 4px;
  position: absolute;
  left: 0;
  content: '';
  -webkit-transform-origin: 2.85714286px center;
  -ms-transform-origin: 2.85714286px center;
  transform-origin: 2.85714286px center;
}
.lines:before {
  top: 10px;
}
.lines:after {
  top: -10px;
}
.cmc-button.open {
  left: 50px;
  top: 6%;
  height: 200px;
  width: 200px;
  -webkit-transform: rotate3d(1, 0, 0, 0deg);
  -ms-transform: rotate3d(1, 0, 0, 0deg);
  transform: rotate3d(1, 0, 0, 0deg);
  margin: none;
  border: none;
}
.cmc-button.open:after {
  opacity: 0;
  width: 190px;
  height: 190px;
}
#openmenu.dark {
  border-color: #333;
}
#openmenu.dark:after {
  border-color: #333;
}
#openmenu.dark .lines {
  background: #333;
}
#openmenu.dark .lines:after,
#openmenu.dark .lines:before {
  background: #333;
}
@media only screen and (max-width: 640px) {
  .cmc-button {
    left: 50px;
  }
  .cmc-button.open {
    left: 20px;
    -webkit-transform: rotate3d(1, 0, 0, 0deg);
    -ms-transform: rotate3d(1, 0, 0, 0deg);
    transform: rotate3d(1, 0, 0, 0deg);
  }
  .menu-vertical.menu-open {
    width: 100%;
  }
  .menu-vertical.menu-open ul {
    position: absolute;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
  }
  footer {
    text-align: center;
  }
  #main.menu-push-toright {
    left: 100%;
    -webkit-transition: .2s ease;
    transition: .2s ease;
  }
  .gallerypage .menu-vertical {
      visibility: hidden;
  }
  .gallerypage .menu-vertical.menu-open {
      visibility: visible;
  }
}
.cmc-button .logo {
  top: -77;
  left: -77;
  background-image: url(../img/cmc_logo.png);
  -webkit-background-size: 100%;
  background-size: 100%;
  opacity: 1;
  width: 200px;
  height: 200px;
  position: absolute;
  -webkit-transform: scale3d(0.25, 0.25, 0.25);
  -ms-transform: scale3d(0.25, 0.25, 0.25);
  transform: scale3d(0.25, 0.25, 0.25);
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.cmc-button .logo.dark{
  background-image: url(../img/cmc_logo-dark.png) !important;
}
.cmc-button.open .logo.dark{
  background-image: url(../img/cmc_logo.png) !important;
}

.cmc-button.open .logo {
  opacity: 1;
  width: 200px;
  height: 200px;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
}
.cmc-button.open .lines {
  opacity: 0;
  width: 180px;
  height: 50px;
}
.cmc-button.open .lines:before,
.cmc-button.open .lines:after {
  width: 180px;
  height: 50px;
}
.cmc-button.open .lines:before {
  top: 60px;
}
.cmc-button.open .lines:after {
  top: -60px;
}
body {
  -webkit-background-size: cover;
  background-size: cover;
}
.gallery h2 {
  text-align: center;
  left: 50%;
}
.gallery button {
  background: transparent;
  border: none;
  -webkit-transition: 1s;
  transition: 1s;
}
.gallery .splash {
  height: 100%;
}
.gallery .splash button {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}












/* Main Gallery & Thumbs Revamp
*********************************/
.gallery-container {
  width: 95%;
  max-width: 1400px;
  margin: 0 auto;
  position: relative;
  padding: 40px 0;
}

.main-swiper {
  width: 100%;
  margin-bottom: 30px;
  overflow: visible !important; /* Allow nav buttons to hang outside if needed */
}
/* ... */

